@@ -4,6 +4,8 @@ Changes to Version 2.1-1
 
   o New cross-platform Rcmdr data editor.
 
+  o Fixed inadvertently reverted histogram dialog (following report by Mark Dunning).
+
 Changes to Version 2.1-0
 
   o Improved R-code generated by many dialogs (mostly implemented by Kosar Karimi-Pour).
